# t8code-AdaptiveResolution

./: CMakeLists.txt  README.md
cmake/: GitProjectVersion.cmake
src/: CMakeLists.txt
